@@ -1,5 +1,10 @@
 2024-03-02  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* inittab.C: Modify invocation of /etc/rc.d/rc.inet2 from
+	/etc/rc.d/rc.M, to modify the former on the fly, before running
+	it, in order to start each service from rc.inet2 in its own container.
+	Fix stopping depedencies of all rc.M and rc.inet2 units.
+
 	* Don't create an open file descriptor for every container's
 	cgroup.eventsfd. Open it only when needed.
 
